Logs added & operators overload

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(UNIXLindaFIFO)
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -pthread)
+
 set(SHARED_FILES
         src/shared/TupleValue.h
         src/shared/TupleValue.cpp
